--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -1,4 +1,6 @@
-
+.container {
+    width: 100%!important;
+}
 .hero_wrapper {
     display: flex;
     justify-content: space-between;
@@ -62,12 +64,19 @@
 }
 
 @media only screen and (max-width:992px) {
+    .hero_content {
+        width: 100%!important;
+    }
     .hero_content h2 {
         font-size: 2rem;
         line-height: 50px;
     }
+    .hero_img {
+        width: 100%!important;
+        margin: 0;
+    }
     .hero_img img {
-        width: 100%;
+        width: 80%!important;
     }
 }
 
@@ -84,12 +93,11 @@
     .hero_content, .hero_img {
         width: 100%;
     }
-
 }
 
-@media only screen and (max-width:600px) {
+@media only screen and (max-width:576px) {
     .hero_content, .hero_img {
-        width: 1005px;
+        width: 100%!important;
     }
 
     .hero_wrapper {
