--- a/src/styles/aboutpage.css
+++ b/src/styles/aboutpage.css
@@ -1,5 +1,11 @@
 
+.container {
+    width: 100%;
+}
 
+.about_page-content {
+    width: 100%!important;
+}
 /*------------- About Page Header --------------*/
 .aboutp_header {
     background-color: #000;
@@ -332,6 +338,9 @@
 
 
 @media only screen and (max-width:1028px) {
+    .about_page-content {
+        width: 100%!important;
+    }
     .aboutp_header-1 h2 {
         font-size: 4rem;
     }
@@ -356,7 +365,7 @@
         background-size: 768px 311px;
     }
     .aboutp_header-1 h2 {
-        font-size: 3rem;
+        font-size: 2.5rem;
         padding: 0;
         margin: 1rem;
         text-align: center;
@@ -365,7 +374,18 @@
     .aboutp_header-2 h2 {
         text-align: center;
         margin: 0;
-        font-size: 2.5rem;
+        padding: 0.5rem;
+        font-size: 2rem;
+    }
+    .aboutp_header-des {
+        height: auto;
+    }
+
+    .aboutp_header-des h2{
+        font-size: 3rem;
+    }
+    .aboutp_header-des p {
+        font-size: 1.1rem;
     }
 
     .about_experience h2 {
@@ -388,5 +408,24 @@
     }
     .about_experience-block ul {
         font-size: 0.7rem;
+    }
+
+    .japanese_team {
+        flex-direction: column;
+    }
+    .japanese_team img {
+        width: 100%;
+    }
+    .japanese_team-des {
+        width: 100%;
+    }
+    .japanese_team-logos img {
+        width: 30%;
+    }
+    .about_experience {
+        background-size: 576px 1000px;
+    }
+    .about_experience-block {
+        width: 28%;
     }
 }
