Resize the container

--- a/src/styles/aboutpage.css
+++ b/src/styles/aboutpage.css
@@ -1,11 +1,10 @@
 
 .container {
-    width: 100%;
+    width: 1140px!important;
+    padding: 0px 15px;
+    margin: auto;
 }
 
-.about_page-content {
-    width: 100%!important;
-}
 /*------------- About Page Header --------------*/
 .aboutp_header {
     background-color: #000;
@@ -356,6 +355,10 @@
     .about_experience h2 {
         margin: 0;
     }
+
+    .container {
+        width: 100%!important;
+    }
 }
 
 @media only screen and (max-width:768px) {
@@ -423,7 +426,7 @@
         width: 30%;
     }
     .about_experience {
-        background-size: 576px 1000px;
+        /* background-size: 576px 1000px; */
     }
     .about_experience-block {
         width: 28%;
