Edit transformation for Responsive

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -90,6 +90,9 @@
     .project_top-content h2 {
         font-size: 1.5rem;
     }
+    .project_item:hover {
+        transform: none;
+    }
 }
 
 @media only screen and (max-width:768px) {
@@ -103,6 +106,7 @@
     .project_wrapper {
         flex-wrap: wrap;
     }
+
 }
 
 @media only screen and (max-width:576px) {
