--- a/src/styles/services.css
+++ b/src/styles/services.css
@@ -91,5 +91,8 @@
 @media only screen and (max-width:576px) {
     .service_item {
         width: 100%;
+        margin: 0;
+        padding: 0 2rem;
+        height: 20rem;
     }
 }
